fixed header menu on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -55,6 +55,14 @@ body {
     float: right;
 }
 
+@media only screen and (max-width: 767px) {
+    .topmenu {
+        clear: both;
+        width: 100%;
+        border-top: 1px solid #00254B;
+    }
+}
+
 .topmenu:hover {
     background-color: #006666;
     color: #ffff33;
